--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@
     text-align: center;
 }
 
+body {
+    display: flex;
+    justify-content: center;
+}
+
 /* HEADER */
 
 header {
@@ -17,35 +22,15 @@ header > h1 {
     font-size: 3rem;
 }
 
-/* SCORE BOARD */
+/* COUNTER */
 
-.score-board {
-    position: relative;
+.counter {
     border: 3px solid black;
-    width: 200px;
+    width: 150px;
     margin: 20px auto;
-    font-size: 2rem;
+    font-size: 3rem;
     border-radius: 5px;
-    padding: 15px 20px;
-}
-
-.badge {
-    background-color: red;
-    color: white;
-    font-size: 1rem;
-    padding: 2px 10px;
-}
-
-#user-label {
-    position: absolute;
-    top: 20px;
-    left: -25px;
-}
-
-#computer-label {
-    position: absolute;
-    top: 20px;
-    right: -40px;
+    padding: 5px;
 }
 
 /* RESULT */
@@ -71,4 +56,18 @@ header > h1 {
 
 .far {
     font-size: 5rem;
+}
+
+/* COLOR INDICATORS */
+
+.green-glow {
+    background-color: green;
+}
+
+.red-glow {
+    background-color: red;
+}
+
+.gray-glow {
+    background-color: gray;
 }
