--- a/style.css
+++ b/style.css
@@ -91,3 +91,26 @@ header > h1 {
     background-color: red;
     border-radius: 10px;
 }
+
+@media screen and (max-width: 500px) {
+    header > h1 {
+        font-size: 2rem;
+    }
+
+    .counter {
+        border: 3px solid #eeeeee;
+        width: 100px;
+        margin: 10px auto;
+        font-size: 2rem;
+        border-radius: 5px;
+        padding: 5px;
+    }
+
+    .far {
+        font-size: 3rem;
+    }
+
+    .result {
+        font-size: 1rem;
+    }
+}
