--- a/style.css
+++ b/style.css
@@ -88,9 +88,10 @@ header > h1 {
 }
 
 .restart:hover {
-    background-color: red;
-    border-radius: 10px;
+    color: tomato;
 }
+
+/* MEDIA QUERIES */
 
 @media screen and (max-width: 500px) {
     header > h1 {
