--- a/style.css
+++ b/style.css
@@ -36,8 +36,8 @@ header > h1 {
 }
 
 .user-display {
-    margin: 50px;
     padding: 20px;
+    width: 200px;
 }
 
 .user-display > p {
@@ -78,6 +78,7 @@ header > h1 {
 
 .result {
     font-size: 1.5rem;
+    margin: 10px;
 }
 
 /* COLOR INDICATORS */
@@ -104,6 +105,7 @@ header > h1 {
     color: tomato;
     border-radius: 5px;
     margin: 30px;
+    text-decoration-line: underline;
 }
 
 .restart:hover {
@@ -115,6 +117,11 @@ header > h1 {
 @media screen and (max-width: 500px) {
     header > h1 {
         font-size: 1.5rem;
+    }
+
+    .user-display {
+        padding: 10px;
+        width: 100px;
     }
 
     .counter {
@@ -137,6 +144,10 @@ header > h1 {
     header > h1 {
         font-size: 5rem;
     }
+
+    .user-display {
+        width: 300px;
+    }   
 
     .counter {
         border: 3px solid #eeeeee;
